WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306784
[WGSL] webgpu:shader,validation,parse,blankspace,* is failing
https://bugs.webkit.org/show_bug.cgi?id=306784
Summary
[WGSL] webgpu:shader,validation,parse,blankspace,* is failing
Tadeu Zagallo
Reported
2026-02-02 10:40:49 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-02 10:40:58 PST
<
rdar://problem/169458432
>
Tadeu Zagallo
Comment 2
2026-02-02 10:48:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57708
EWS
Comment 3
2026-02-04 03:22:36 PST
Committed
306765@main
(33c2323b2b43): <
https://commits.webkit.org/306765@main
> Reviewed commits have been landed. Closing PR #57708 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug