[WGSL] webgpu:shader,validation,parse,blankspace,* is failing https://bugs.webkit.org/show_bug.cgi?id=306784 rdar://169458432

Reviewed by Mike Wyrzykowski.

Fix parsing of null characters and unicode space characters.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/parse/blankspace-expected.txt:
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUDeviceImpl.cpp:
(WebCore::WebGPU::DeviceImpl::createShaderModule):
* Source/WebGPU/WGSL/Lexer.cpp:
(WGSL::Lexer<T>::skipBlockComments):
(WGSL::Lexer<T>::skipLineComment):
(WGSL::Lexer<T>::skipWhitespaceAndComments):
* Source/WebGPU/WGSL/Lexer.h:
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::findShaderModuleParameters):
(WebGPU::Device::createShaderModule):
* Source/WebGPU/WebGPU/WebGPU.h:

Canonical link: https://commits.webkit.org/306765@main